src/style.css
.section {
  min-width: 320px;
  padding: 50px 0;
  word-wrap: break-word;

  @media (min-width: 768px) {
    padding: 60px 0;
  }

  @media (min-width: 992px) {
    padding: 75px 0;
  }

  &__inner {
    max-width: var(--ui-content-container);
    margin: 0 auto;
    padding: var(--ui-content-gutter);
  }

  &__header {
    margin-bottom: 50px;
  }

  &__content {

    @media(min-width: 992px) {
      display: flex;
      align-items: flex-start;
    }
  }
}

.title {
  margin-bottom: 15px;

  &:last-child {
    margin-bottom: 0;
  }
}

.subtitle {
  max-width: 870px;
}

.main-article {
  margin-bottom: 50px;

  @media(min-width: 768px) {
    max-width: 604px;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 190px;
  }

  @media(min-width: 992px) {
    width: 500px;
    margin-left: 0;
    margin-right: 0;
    padding-bottom: 150px;
    margin-bottom: 0;
  }

  &__content {
    padding: 8px 12px;
    border: solid 3px #979797;

    @media(min-width: 768px) {
      position: relative;
      max-width: 540px;
      padding: 12px;
    }

    @media(min-width: 992px) {
      max-width: 440px;
    }
  }

  &__title {
    font-size: calc(var(--ui-heading-lg-size) * 0.7143);

    @media(min-width: 768px) {
      font-size: calc(var(--ui-heading-lg-size) * 0.8572);
    }

    @media(min-width: 992px) {
      font-size: var(--ui-heading-lg-size);
    }
  }

  &__date {
    display: block;
  }

  &__button {
    margin-top: 45px;
    margin-bottom: 7px;
    text-align: left;

    @media(min-width: 768px) {
      max-width: 40%;
      margin-top: 36px;
      margin-bottom: 0;
    }

    &-icon {
      width: 12px;
      height: 12px;
      font-size: 0;
    }
  }

  &__picture {
    display: block;
    position: relative;
    width: calc(100% + 24px);
    height: 200px;
    margin-left: -12px;
    margin-right: -12px;
    margin-bottom: -8px;

    @media(min-width: 768px) {
      position: absolute;
      width: 360px;
      height: 264px;
      right: -64px;
      transform: translateY(-56px);
      margin-left: 0;
      margin-right: 0;
    }

    @media(min-width: 992px) {
      width: 300px;
      height: 220px;
    }
  }

  &__image {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: var(--ui-media-bg);
    object-fit: cover;
  }
}

.articles-wrapper {

  @media(min-width: 992px) {
    display: flex;
    flex: 1;
    flex-wrap: wrap;
    padding-left: 40px;
    margin-left: -15px;
    margin-right: -15px;
  }
}

.article {
  border-top: 1px solid #979797;
  padding-top: 6px;
  margin-bottom: 40px;

  @media (min-width: 992px) {
    width: calc(50% - 30px);
    border-top: 1px solid #979797;
    padding-top: 5px;
    margin-left: 15px;
    margin-right: 15px;
  }

  &:nth-last-of-type(2):first-child,
  &:nth-last-of-type(2):first-child ~ & {
    width: 100%;
  }

  &__date {
    display: block;
    margin-bottom: 5px;
  }

  &__content {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  &__title {
    width: 0;
    flex: 1;
    font-size: calc(var(--ui-heading-size) * 0.8334);
  }

  &__button {
    &-icon {
      width: 24px;
      height: 24px;
      padding: 4px;
    }
  }
}

.btns-group {
  padding-top: 50px;
  text-align: center;
}

.button {
  width: 100%;
  
  @media (min-width: 480px) {
    width: auto;
  }
}

